# ai_gemini_model

./: README.md  pyproject.toml  report.md
src/ai_gemini_model/: crew.py  main.py
